tests/error/linear_errors/tuple_use_index.err
Error: Drop violation (at $FILE:13:4)
   | 
11 | def foo() -> None:
12 |     t = (qubit(), qubit(), qubit())
13 |     use(t[1])
   |     ^^^^^^^^^ Expression with non-droppable type `qubit` is leaked

Help: Consider assigning this value to a local variable

Guppy compilation failed due to 1 previous error
